Fixed navbar collapse. Fixed footer

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@
 
 .App-container {
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 footer {
